# mcp-course

./: .gitignore  README.md  README_ja.md  README_tr.md  README_vi.md  README_zh-CN.md  pyproject.toml
.gemini/: settings.json
.github/: pull_request_template.md
.github/workflows/: build_documentation.yml  build_pr_documentation.yml  upload_pr_documentation.yml
coursework/unit1/: pyproject.toml  server.py
coursework/unit2/: client.py  package-lock.json  package.json  pyproject.toml
coursework/unit2/mcp-sentiment/: config.json
coursework/unit2/my-agent/: agent.json  agent.ts
mcp-langchain-test/: .env  client.py  flappy_bird.py  main.py  math_operations.py  pyproject.toml  requirements.txt
mcp-practice/: 1_server.py  4_mcp_client_gradio.py  5_mcp_client_gradio.py  note.md  package.json
mcp-practice/mcp-sentiment/: app.py
mcp-practice/tinyagents/: agent.json
projects/unit3/build-mcp-server/starter/: config.py  gemini_service.py  pyproject.toml  server.py  test.py  test_server.py  validate_starter.py
projects/unit3/build-mcp-server/starter/.github/workflows/: test-webhook.yml
scripts/: myTranslation.py  update_toc.py
units/en/: _toctree.yml
units/en/unit0/: introduction.mdx
units/en/unit1/: capabilities.mdx  gradio-mcp.mdx  hf-mcp-server.mdx  mcp-clients.mdx  sdk.mdx
units/en/unit2/: clients.mdx  continue-client.mdx  gradio-client.mdx  gradio-server.mdx  tiny-agents.mdx
units/en/unit3/: .mcp-server-hf-course-in-action.png.icloud
units/ja/: _toctree.yml
units/pt/: _toctree.yml
units/zh-CN/: _toctree.yml
units/zh_CN/: _toctree.yml
(+134 files in other folders)
