[project]
name = "pr-agent"
version = "1.0.0"
description = "MCP server for PR template suggestions - Starter Code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.11.2",
    "mcp>=1.12.4",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.21.0",
]
